[package]
name = "wasm-cycles-crypto-bigint"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rand_core = { version = "0.6", default-features = false }
rand_chacha = { version = "0.3", default-features = false }

crypto-bigint = { version = "0.5", default-features = false, features = ["rand_core"] }
